--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     </nav>
 
     <header id="home">
-        <img src="logo1.png" alt="BinesTec Logo">
+        <img src="logo.jfif" alt="BinesTec Logo">
         <h1>BinesTec</h1>
         <p>Your idea, your space. We make it real.</p>
     </header>
